# TG_BOT_TRADING

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  FIX_NO_TRADES_ISSUE.md  Makefile  PROJECT_DOCUMENTATION.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  nneeweww
backend/: Dockerfile  Dockerfile.dev  (+3 more)
backend_v2/: .env.example  DEPLOYMENT.md  Dockerfile  PHASES_1_2_PERFECTED.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  README_V2.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
backend_v2/alembic/: env.py
backend_v2/alembic/versions/: 20260109_0001_001_extend_tables_for_clean_arch.py
backend_v2/app/: main.py
backend_v2/app/application/shared/: __init__.py  command.py  handler.py  query.py  unit_of_work.py
backend_v2/app/application/signals/: __init__.py
backend_v2/app/application/signals/commands/: __init__.py  process_signal.py
backend_v2/app/application/signals/dtos/: __init__.py  signal_dto.py
backend_v2/app/application/signals/handlers/: __init__.py  process_signal_handler.py
backend_v2/app/application/trading/commands/: __init__.py  close_position.py  execute_copy_trade.py
backend_v2/app/application/trading/dtos/: __init__.py  position_dto.py  trade_dto.py
backend_v2/app/application/trading/handlers/: __init__.py  close_position_handler.py  execute_copy_trade_handler.py
backend_v2/app/config/: __init__.py  logging.py  settings.py
backend_v2/app/domain/: __init__.py
backend_v2/app/domain/exchanges/exceptions/: __init__.py  exchange_exceptions.py
backend_v2/app/domain/exchanges/ports/: __init__.py  exchange_port.py
backend_v2/app/domain/shared/: __init__.py  aggregate_root.py  domain_event.py  entity.py  exceptions.py  value_object.py
backend_v2/app/domain/signals/: __init__.py
backend_v2/app/domain/trading/: __init__.py
backend_v2/app/infrastructure/: __init__.py
backend_v2/app/infrastructure/auth/: __init__.py  jwt_manager.py  telegram_auth.py
backend_v2/app/infrastructure/encryption/: __init__.py  encryption_manager.py
backend_v2/app/infrastructure/exchanges/: __init__.py
backend_v2/app/infrastructure/messaging/: __init__.py  event_bus.py
backend_v2/app/presentation/api/: dependencies.py  deps.py
backend_v2/app/presentation/workers/: __init__.py  celery_app.py
backend_v2/docs/: PHASE_6_COMPLETE.md
backend_v2/tests/: conftest.py
backend_v2/tests/e2e/: test_api_trading.py  test_signal_flow.py
backend_v2/tests/unit/domain/: test_domain_events.py  test_position_aggregate.py  test_trade_aggregate.py
backend_v2/tests/unit/infrastructure/: __init__.py
(+202 files in other folders)
